<resources>
    <string name="app_name">JianHuaRegist</string>
    <string name="login">登录</string>
    <!--主界面-->
    <string name="conditions">请不要戴眼镜，口罩</string>
    <!--注册-->
    <string name="reg_title">填写信息</string>
    <string name="reg_reset">重拍</string>
    <string name="reg_ids">身份</string>
    <string name="reg_group">分组</string>
    <string name="reg_name">姓名</string>
    <string name="reg_phone">手机号</string>
    <string name="reg_students">学生</string>
    <string name="reg_worker">职工</string>
    <string name="reg_btn_commit">提交</string>
    <string name="reg_btn_failed">返回</string>
    <string name="reg_btn_sure">确定</string>
    <!--失败-->
    <string name="reg_fail_title">注册失败</string>
    <string name="reg_success_title">注册成功</string>
    <string name="fail_error">可能遇到了问题</string>
    <string name="fail_toCheck">请检查！</string>
    <string name="fail_fail_1">图像是否存在清晰人脸</string>
    <string name="fail_fail_2">手机号是否已经注册</string>
    <string name="fail_fail_3">人员是否已经注册</string>
    <string name="fail_fail_4">图像是否达到上限</string>
    <string name="success_notice">注册成功</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="door">门禁</string>
    <string name="hall">食堂</string>
</resources>
